--- a/hospital/templates/hospital/form.html
+++ b/hospital/templates/hospital/form.html
@@ -1,8 +1,36 @@
+{% load humanize %}
+
 <!DOCTYPE html>
 <html>
+<head>
+	<style>
+		ul li {
+			display: inline-block;
+		}
+	</style>
+</head>
 <body>
 
     <h1>Form</h1>
-    <h3>Hospital: {{ hospital.diaplay_name }} (<a href="{% url 'hospital_list' %}">change</a>)
+    <h3>Hospital: {{ hospital.diaplay_name }} (<a href="{% url 'hospital_list' %}">change</a>)</h3>
+
+    {% if messages %}
+        <ul class="messages">
+            {% for message in messages %}
+            <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+            {% endfor %}
+        </ul>
+    {% endif %}
+
+    {% for row in forms %}
+        <form action="" method="POST">
+            {% csrf_token %}
+           <h4>{{ row.stock }}</h4>
+            <p>Last updated {{ row.last_update.created|naturaltime }}</p>
+            {{ row.form.as_p }}
+           <input type="submit" value="Update">
+        </form>
+    {% endfor %}
+
 
 </body>
